// Issue: #2204 - Network components for crafting system
// gRPC streaming protocol for multi-step crafting workflows
syntax = "proto3";
package necp.crafting.v1;

option go_package = "github.com/necpgame/crafting-network-service-go/pkg/proto";

// CraftingStreamingService provides real-time streaming for crafting operations
service CraftingStreamingService {
  // StreamCraftingProgress streams real-time crafting progress updates
  rpc StreamCraftingProgress(StreamCraftingProgressRequest) returns (stream CraftingProgressUpdate);
  
  // StreamCraftingQueue streams queue position updates for crafting requests
  rpc StreamCraftingQueue(StreamCraftingQueueRequest) returns (stream CraftingQueueUpdate);
  
  // StreamMultiStepWorkflow streams progress for multi-step crafting workflows
  rpc StreamMultiStepWorkflow(StreamMultiStepWorkflowRequest) returns (stream MultiStepWorkflowUpdate);
}

// StreamCraftingProgressRequest initiates a crafting progress stream
message StreamCraftingProgressRequest {
  string session_id = 1;  // UUID of crafting session
  string player_id = 2;   // UUID of player
  string token = 3;        // Authentication token
}

// CraftingProgressUpdate contains real-time crafting progress information
message CraftingProgressUpdate {
  string session_id = 1;
  int32 progress_percent = 2;        // 0-100
  int64 elapsed_seconds = 3;
  int64 remaining_seconds = 4;
  string current_step = 5;            // Current crafting step name
  int32 step_progress = 6;           // Progress within current step (0-100)
  repeated CraftingStepStatus steps = 7;
  int64 timestamp_ms = 8;            // Server timestamp in milliseconds
}

// CraftingStepStatus represents status of a crafting step
message CraftingStepStatus {
  string step_id = 1;
  string step_name = 2;
  bool completed = 3;
  int32 progress = 4;                // 0-100
  string status_message = 5;
}

// StreamCraftingQueueRequest initiates a crafting queue stream
message StreamCraftingQueueRequest {
  string player_id = 1;   // UUID of player
  string token = 2;        // Authentication token
}

// CraftingQueueUpdate contains queue position and status updates
message CraftingQueueUpdate {
  string request_id = 1;             // UUID of crafting request
  int32 queue_position = 2;          // Current position in queue (0 = processing)
  int32 estimated_wait_seconds = 3;
  string status = 4;                  // "queued", "processing", "completed", "failed"
  string recipe_id = 5;               // UUID of recipe
  int64 timestamp_ms = 6;
}

// StreamMultiStepWorkflowRequest initiates a multi-step workflow stream
message StreamMultiStepWorkflowRequest {
  string workflow_id = 1;  // UUID of multi-step workflow
  string player_id = 2;     // UUID of player
  string token = 3;         // Authentication token
}

// MultiStepWorkflowUpdate contains progress for multi-step crafting workflows
message MultiStepWorkflowUpdate {
  string workflow_id = 1;
  int32 overall_progress = 2;        // 0-100
  int32 current_step_index = 3;
  int32 total_steps = 4;
  string current_step_name = 5;
  repeated WorkflowStepStatus steps = 6;
  string status = 7;                 // "active", "paused", "completed", "failed"
  int64 timestamp_ms = 8;
}

// WorkflowStepStatus represents status of a workflow step
message WorkflowStepStatus {
  int32 step_index = 1;
  string step_id = 2;
  string step_name = 3;
  bool completed = 4;
  bool failed = 5;
  int32 progress = 6;                // 0-100
  string error_message = 7;
  int64 started_at_ms = 8;
  int64 completed_at_ms = 9;
}
